@@ -2,7 +2,12 @@ apt-clone (0.1.4) UNRELEASED; urgency=low
 
   * apt_clone.py:
     - add apt::architecture to the state file
-
+  * apt_clone.py:
+    - if run in restore-new-distro mode and we are on the new distro
+      already (like e.g. ubiquity) then protect the installed packages on
+      restore to ensure that conflicts get resolved in favor of the new
+      defaults (important for e.g. clean xubuntu clone)
+  
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 31 Mar 2011 11:45:41 +0200
 
 apt-clone (0.1.3) natty; urgency=low
